algumas alterações no header

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -12,7 +12,7 @@ header-logo--placeholder {
 }
 
 .header-logo img {
-    width: 60px;    /* mesma largura do logo real */
+    width: 60px;
     height: 45px;
     padding: 8px;
 }
