--- a/src/components/chatroom/chatroom.css
+++ b/src/components/chatroom/chatroom.css
@@ -15,7 +15,7 @@ input {
 button {
   border: none;
   padding: 10px;
-  background: green;
+  background: #151414;
   color: #fff;
   font-size: 1.2em;
   font-weight: bold;
