--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -75,6 +75,25 @@
     opacity: 0.7;
 }
 
+
+.telegram-link {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    text-decoration: none;
+    color: inherit;
+    font-size: 14px; /* Tamanho do texto */
+}
+.telegram-link img {
+    width: 24px;
+    height: 24px;
+    transition: opacity 0.3s;
+}
+
+.telegram-icon:hover {
+    opacity: 0.7;
+}
+
 /* Versão Desktop */
 @media (min-width: 768px) {
     .app-footer {
