--- a/src/components/chatbot/chatbot.css
+++ b/src/components/chatbot/chatbot.css
@@ -14,7 +14,7 @@
  * Usa as cores da FURIA e efeitos de hover
  */
 .chatbot-button {
-    background-color: #ff4655;
+    background-color: #050505;
     color: white;
     border: none;
     padding: 15px 25px;
@@ -54,7 +54,7 @@
  * Contém título e botão de fechar
  */
 .chatbot-header {
-    background-color: #ff4655;
+    background-color: #0b0b0b;
     color: white;
     padding: 15px;
     display: flex;
@@ -137,7 +137,7 @@
  * Usa a cor principal da FURIA
  */
 .message.user .message-content {
-    background-color: #ff4655;
+    background-color: #000000;
     color: white;
     border-bottom-right-radius: 5px;
 }
@@ -182,7 +182,7 @@
  * Estilo circular com ícone
  */
 .chatbot-input button {
-    background-color: #ff4655;
+    background-color: #000000;
     color: white;
     border: none;
     width: 40px;
@@ -200,5 +200,5 @@
  * Escurece levemente a cor
  */
 .chatbot-input button:hover {
-    background-color: #e63e4c;
+    background-color: #322e2e;
 }
